z-index fix

--- a/Dokumentationssite/dokumentation.css
+++ b/Dokumentationssite/dokumentation.css
@@ -15,6 +15,7 @@
     height: 5vw;
     width: 100vw;
     background-color: #101421;
+    z-index: 10;
 }
 
 .dropdown_content li {
@@ -283,6 +284,7 @@ CLASSES [ .class ]
     width: 80vw;
     height: 80vw;
     transform: rotate(90deg);
+    z-index: 0;
 }
 
 
